# rhythm

./: .clang-format  .gitignore  CMakeLists.txt  CODING_STYLE.md  README.md
.github/workflows/: cmake-multi-platform.yml  deploy-web.yml
assets/: liberation_mono.h  roboto_medium.h
benchmark/: sum.rhy
docs/: intro.md  refcard.html  web-deployment.md
examples/: array.in  array.rhy  avl.rhy  bad_double_var.in  bad_func.rhy  bad_return.in  binary_tree.rhy  bisection.in  block3.rhy  block_curious.rhy  block_easy.rhy  closure_hard.rhy  continue_block_scope.rhy  continue_for.rhy  continue_hits_increment.rhy  continue_nested.rhy  continue_while.rhy  core_test.rhy  course_scheduling.rhy  expr1.txt  for.rhy  hanoi.rhy  lambda.in  logical.in  map.rhy  math.rhy  mergesort.rhy  mixed_break_continue.rhy  mom_select.rhy  nqueen.rhy  peasant_multiply.rhy  perm.rhy  postage.rhy  postfix.rhy  printf.in  qsort.rhy  readline.in1  readline.rhy  splittable.rhy  sqrt.rhy  (+4 more)
examples/closure/: factory.rhy  nested.rhy  nested_update_upvalues.rhy
fixtures/: arity.in  array.in  assignment.in  bad_double_var.in  bisection.in  block.in  block2.in  block_easy.rhy  break_continue.in  clock_fun.in  closure_hard.in  def_fun.in  expr1.txt  fib.in  for.in  func.in  hanoi.in  if.in  io.in  logical.in  map.in  nqueen.in  sqrt.in  stmts.in  subscript.in  test.in  tree.in  variables.in  whileloop.in
fixtures/closure/: basic.rhy  closure_loops.rhy  recursive.rhy  scope.rhy
scratch/: embedded_fonts.cpp  embedded_fonts.hpp  file.cpp  file.hpp  imgui_main.cpp
scripts/: check-transpose-wasm.mjs
src/: ast_printer.cpp  ast_printer.hpp  example.cpp  exception.hpp  expr.cpp  expr.hpp  interpreter.cpp  interpreter.hpp  lox_function.hpp  main.cpp  native_func.hpp  native_func_array.hpp  native_func_math.hpp  native_math.hpp  parser.hpp  resolver.cpp  resolver.hpp  scanner.cpp  scanner.hpp  statement.hpp  token.hpp  version.hpp.in
src/core/: core_lib.hpp
src/transpose/: javascript_generator.cpp  javascript_generator.hpp  main.cpp  runtime.cpp  runtime.hpp  transpiler.cpp  transpiler.hpp  wasm_interface.cpp
src/vm/: chunk.cpp  chunk.hpp  compiler.cpp  compiler.hpp  main.cpp  vm.cpp  vm.hpp  vm_exception.hpp
tests/: browser_runtime_test.cjs
web/: app.js  build-info.js  index.html  styles.css
